# IntraLog

./: CMakeLists.txt  README.md
include/: intraLog.h  intraLogNULL.h
sample/: main.cpp  test.cpp  test.h
src/: intraLog.cpp
